src/test/ui/parser/extern-no-fn.stderr
error: non-item in item list
  --> $DIR/extern-no-fn.rs:2:5
   |
LL | extern {
   |        - item list starts here
LL |     f();
   |     ^ non-item starts here
LL | }
   | - item list ends here

error: aborting due to previous error

