src/test/ui/parser/extern-no-fn.rs
extern {
    f(); //~ ERROR non-item in item list
}

fn main() {
}
